clusters/9ka/proxies/service-argon.yaml
apiVersion: v1
kind: Service
metadata:
  name: argon
  namespace: proxies
spec:
  type: ExternalName
  externalName: argon.virt.efgh.nl
  ports:
  - port: 80
    name: http
    targetPort: 80
