clusters/9ka/proxies/service-justnimbus.yaml
apiVersion: v1
kind: Service
metadata:
  name: justnimbus
  namespace: proxies
spec:
  type: ExternalName
  externalName: justnimbus.iot.efgh.nl
  ports:
  - port: 1880
    name: nodered
    targetPort: 1880
