clusters/9ka/proxies/service-laadpaal.yaml
apiVersion: v1
kind: Service
metadata:
  name: laadpaal
  namespace: proxies
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: laadpaal-1
  namespace: proxies
  labels:
    kubernetes.io/service-name: laadpaal
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "172.21.45.14"
