clusters/9ka/proxies/ingress-9ka.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: 9ka
  namespace: proxies
spec:
  ingressClassName: nginx
  rules:
  - host: 9ka.nl
    http:
      paths:
      - path: /~jorik
        pathType: Prefix
        backend:
          service:
            name: argon
            port:
              name: http
  tls:
  - hosts:
    - 9ka.nl
    secretName: 9ka-tls
