clusters/9ka/proxies/ingress-laadpaal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: laadpaal.9ka.nl
    external-dns.alpha.kubernetes.io/target: 431113a6-4cf3-4a66-9750-17113ae2e689.cfargotunnel.com
  name: laadpaal
spec:
  ingressClassName: cilium
  rules:
  - host: laadpaal.9ka.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laadpaal
            port:
              name: http
