clusters/9ka/proxies/ingress-sabnzbd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: sabnzbd.9ka.nl
    external-dns.alpha.kubernetes.io/target: 431113a6-4cf3-4a66-9750-17113ae2e689.cfargotunnel.com
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: sabnzbd
  namespace: proxies
spec:
  ingressClassName: cilium
  rules:
  - host: sabnzbd.9ka.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: neon
            port:
              name: sabnzbd
