clusters/9ka/proxies/ingress-transmission.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/app-root: /transmission/web/
  name: transmission
  namespace: proxies
spec:
  ingressClassName: cilium
  rules:
  - host: transmission.9ka.nl
    http:
      paths:
      - path: /transmission
        pathType: Prefix
        backend:
          service:
            name: neon
            port:
              name: transmission
  tls:
  - hosts:
    - transmission.9ka.nl
    secretName: transmission-tls
